--- a/scripts/cka_similarity_analysis.ipynb
+++ b/scripts/cka_similarity_analysis.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "model_name = \"meta-llama/Meta-Llama-3.1-8B-Instruct\"  # Or any other Llama checkpoint available\n",
+    "model_name = \"unsloth/Llama-3.1-8B-Instruct\"  # Or any other Llama checkpoint available\n",
     "model, tokenizer = load_model_and_tokenizer(model_name)\n",
     "model = model.eval()\n",
     "model = model.cuda()"
