--- a/scripts/cka_similarity_analysis.ipynb
+++ b/scripts/cka_similarity_analysis.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ccchang/xKV\n"
+      "/home/tl2020/xKV\n"
      ]
     }
    ],
@@ -21,7 +21,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tl2020/.conda/envs/xKV/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from utils import load_model_and_tokenizer"
@@ -36,26 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6aaa6819a094ec8bf7e74dfd683dc27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_name = \"unsloth/Llama-3.1-8B-Instruct\"  # Or any other Llama checkpoint available\n",
+    "model_name = \"unsloth/Llama-3.2-1B-Instruct\"  # Or any other Llama checkpoint available\n",
     "model, tokenizer = load_model_and_tokenizer(model_name)\n",
     "model = model.eval()\n",
     "model = model.cuda()"
@@ -63,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,25 +103,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tl2020/.conda/envs/xKV/lib/python3.10/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "from evaluate.data.dataset import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating train split: 96 examples [00:00, 468.72 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = Dataset(\"ruler/niah_multivalue\", tokenizer, 65536, 4, -1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,19 +174,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num samles (layers) collected: 32\n"
+      "Num samles (layers) collected: 16\n"
      ]
     }
    ],
    "source": [
     "print(\"Num samles (layers) collected:\", len(collected_k_outputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n",
+      "torch.Size([1, 65228, 512])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in collected_k_outputs:\n",
+    "    print(i.shape)\n"
    ]
   },
   {
@@ -1605,7 +1649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "xKV2",
+   "display_name": "xKV",
    "language": "python",
    "name": "python3"
   },
@@ -1619,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
